<resources>
    <string name="app_name">Covid-19 Live Tracking</string>
    <string name="title_activity_maps">Covid-19 Live Tracking</string>
    <string name="continue_string">Continue</string>


    <string name="stay_in_touch">Use this starter kit to build your Android app faster.</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_messenger">Admin Panel</string>

    <string name="facebookLogin">Facebook Login</string>
    <string name="facebook_app_id">686078505161575</string>
    <string name="fb_login_protocol_scheme">fb686078505161575</string>

    <string name="fullName">Full Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="or">or</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create new account</string>
    <string name="name_required_error">Name is required to sign up.</string>
    <string name="phone_required_error">Phone number is required to sign up.</string>
    <string name="email_required_error">Email address is required to sign up.</string>
    <string name="password_required_error">Password is required to sign up.</string>
    <string name="malformed_phone_error">This phone number is badly formatted.</string>
    <string name="malformed_email_error">Please enter valid email.</string>
    <string name="short_password_error">Password should be at least 6 characters.</string>
    <string name="select_image">Select Image</string>
    <string name="logout">Log Out</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Allow push notification when there\'s new data available</string>
    <string name="pref_key_check">pref_key_check</string>
    <string name="about_message">Hello, got any ideas?, don\'t hesitate to contact me \\n\\ndhikyaldwiansyah@gmail.com\\n\\nData scraped from:\\n- infographics.channelnewsasia.com\\n- JHU CSSE</string>
    <string name="refresh_timeout">You are refreshing too fast, please wait for a while before refreshing again</string>
    <string name="network_problem">There\'s a problem with your network</string>
    <string name="pref_key_datasource" translatable="false">pref_key_datasource</string>
    <string name="pref_key_theme" translatable="false">pref_key_theme</string>
    <string name="recover">Recover</string>
    <string name="confirm">Confirm</string>
    <string name="fetch">Fetch…</string>
    <string name="infected">Infected</string>
    <string name="pull_me_up">Pull me up</string>
    <string name="country">Country</string>
    <string name="enable_push_notif">Enable Push Notification</string>
    <string name="what_is">What is COVID-19?</string>
    <string name="covid_prevent">COVID-19 Prevention</string>
    <string name="click_to_show">Click to show a list of data source to choose from</string>
    <string name="data_source">Data Source</string>
    <string name="data_provided">Data provided by </string>
    <string name="other">Others</string>
    <string name="select_data_source">Select data source</string>
    <string name="change_language">Change Language</string>
    <string name="change_theme">Change Theme</string>
    <string name="info_recovered">Recovered: </string>
    <string name="info_death">Death: </string>
    <string name="info_active">Active: </string>
    <string name="info_confirm">Confirm: </string>

    <!-- Preference Titles -->
    <string name="title_activity_menu">Menu</string>
    <string name="title_graph">Graph</string>
    <string name="title_settings">Settings</string>
    <string name="corona_live_tracking">COVID-19 Live Tracking</string>
    <string name="covid_19_cases">Covid-19 Cases</string>

    <!-- Messages Preferences -->

    <string-array name="pref_auto_lock_labels">
        <!--        <item>Channel New Asia</item>-->
        <item>Johns Hopkins CSSE</item>
        <item>ArcGIS-NCOV</item>
        <item>Worldometers</item>
    </string-array>

    <string-array name="pref_auto_lock_values">
        <!--        <item>0</item>-->
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <string-array name="pref_auto_lock_labels_theme">
        <item>Day</item>
        <item>Night</item>
    </string-array>

    <string-array name="pref_auto_lock_values_theme">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="title_activity_cases">Covid-19 Cases</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="active">Active</string>
    <string name="death">Death</string>
    <string name="recovered">Recovered</string>
    <string name="add">Add</string>
    <string name="choose_location">Choose Location</string>
    <string name="add_case">Add Case</string>
    <string name="case_added">Covid-19 case successfully added</string>
    <string name="case_updated">Covid-19 case successfully updated</string>
    <string name="error">Error: %1$s</string>
    <string name="error_field_required">Area field is required</string>
    <string name="area">Area</string>
    <string name="delete_confirmation">Are you sure want to delete it?</string>
    <string name="only_admin_can">Only admin can perform this action</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="admin_signed_in">Admin Signed In</string>
    <string name="total">Total</string>
    <string name="download_csv_file">Download CSV file</string>
    <string name="csv_file_path">CSV File saved to</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
