<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardCornerRadius="2dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <TextView
                    android:id="@+id/tvArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    tools:text="London, UK" />

                <ImageView
                    android:id="@+id/edit_case"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/delete_case"
                    android:padding="4dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/ic_round_edit_24" />
                <ImageView
                    android:id="@+id/delete_case"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:padding="4dp"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/ic_round_delete_24" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/active"
                    android:textColor="@color/black_night"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/recovered"
                    android:textColor="@color/black_night"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/death"
                    android:textColor="@color/black_night"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvActive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/black_night"
                    android:textSize="17sp"
                    tools:text="12004" />

                <TextView
                    android:id="@+id/tvRecovered"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/black_night"
                    android:textSize="17sp"
                    tools:text="2400" />

                <TextView
                    android:id="@+id/tvDeath"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/black_night"
                    android:textSize="17sp"
                    tools:text="150" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</layout>