<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.instamobile.firebaseStarterKit.ui.fragment.signUp.SignUpFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

                    <TextView
                        android:id="@+id/toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Edit Case"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>


            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_marginTop="6dp"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/choose_location"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/etArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_border"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ciAvatar"
                android:hint="@string/area" />

            <EditText
                android:id="@+id/etActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_border"
                android:hint="@string/active"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ciAvatar" />


            <EditText
                android:id="@+id/etDeath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_border"
                android:hint="@string/death"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPhone" />

            <EditText
                android:id="@+id/etRecovered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_border"
                android:hint="@string/recovered"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etDeath" />


            <Button
                android:id="@+id/btnUpdateCase"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="54dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/sign_up_button_selector"
                android:text="Update"
                android:textAllCaps="false"
                android:textColor="@color/mainBgColor"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/errorTV"
                app:layout_constraintVertical_bias="0.58000004" />

        </LinearLayout>
    </ScrollView>
</layout>